# felin

./: Cargo.toml  README.md
examples/slider/: component.rs  main.rs  slider.rs
examples/text/: main.rs
src/: definitions.rs  events.rs  lib.rs  prelude.rs  random.rs  system.rs
src/engine/: event_state.rs  frame.rs  mod.rs  shape2d.rs  shapes.rs  window_events.rs
src/engine/pipelines/: mod.rs  shape2d.rs
src/engine/pipelines/shaders/: shader.vert
src/engine/shaders/: shader.frag  shader.vert  shader2.frag  shader2.vert
src/gui/: definitions.rs  mod.rs
src/gui/elements/: circle.rs  mod.rs  rectangle.rs  square.rs  triangle.rs
src/mesh/: circle.rs  grid.rs  img.rs  mod.rs  rectangle.rs  text.rs  texture.rs
src/pipeline/: default.rs  instancing.rs  mod.rs  text.rs
src/pipeline/shaders/: default.frag  instance.frag  instance.vert  text.frag  text.vert  texture.frag  texture.vert  texture_array.frag  texture_array.vert  triangle.frag  triangle.vert
src/utils/: batch.rs  events.rs  font.rs  grid.rs  mod.rs  node.rs  style.rs
