[package]
name = "engine"
version = "0.1.0"
authors = ["tonis2 <tonis.anton18@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17"
env_logger = "0.6"
glsl-to-spirv = "0.1"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
froggy = "*"
lyon = "*"
winit = "0.20.0-alpha3"
collision = "*"

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu-rs.git"
version = "0.3.0"

