[package]
name = "felin"
version = "0.1.0"
authors = ["tonis2 <tonis.anton18@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
cgmath = "*"
glsl-to-spirv = "0.1"
image = "*"
winit = "0.20.0-alpha4"
rand = "0.7.0"
froggy = "*"
lyon = "*"
collision = "*"
uuid = { version = "0.7", features = ["serde", "v4"] }
wgpu = "0.4.0"
fontdue = "*"
lazy_static = "*"

