[package]
name = "felin"
version = "0.1.0"
authors = ["tonis2 <tonis.anton18@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
cgmath = "*"
glsl-to-spirv = "*"
image = "*"
winit = "0.20.0-alpha4"
lyon = "*"
collision = "*"
uuid = { version = "0.7", features = ["serde", "v4"] }
wgpu = "0.4.0"
fontdue = "*"
lazy_static = "*"

